@@ -6,5 +6,10 @@
   Fortunately the BOINC developers are considering using another crypto
   library: http://www.ssl.berkeley.edu/pipermail/boinc_dev/2005-May/002382.html
 
-* Add information from this page to boinc_client manpage:
-  http://boinc.berkeley.edu/gui_rpc_control.php
+* debian/manpages/boinc.xml:
+  - Add information from this page: http://boinc.berkeley.edu/gui_rpc_control.php
+    (Frank)
+  - Have a look at the FreeBSD BOINC manpage (debian/manpages/boinc-client.1.freebsd)
+    and adopt content that is also useful for our manpage. (Frank)
+  - Revise the description of all options. IMHO they are pretty useless if they are
+    only a copy of `boinc -help'. (Frank)
