@@ -7,7 +7,7 @@
   <!ENTITY dhusername  "Steffen Moeller">
   <!ENTITY dhemail     "<email>moeller@pzr.uni-rostock.de</email>">
   <!ENTITY dhpackage   "boinc">
-  <!ENTITY dhdate      "<date>November 12, 2004</date>">
+  <!ENTITY dhdate      "<date>June 26, 2005</date>">
 
   <!ENTITY debian      "<productname>Debian</productname>">
   <!ENTITY gnu         "<acronym>GNU</acronym>">
@@ -68,23 +68,40 @@
       
     <variablelist>
       <varlistentry>
+        <term><option>-help</option></term>
+        <listitem>
+          <para>show options</para>
+        </listitem>
+      </varlistentry>
+      
+      <varlistentry>
         <term><option>-version</option></term>
         <listitem>
           <para>show version info</para>
         </listitem>
       </varlistentry>
+
+      <varlistentry>
+        <term><option>-exit_when_idle</option></term>
+        <listitem>
+          <para>get/process/report work, then exit</para>
+        </listitem>
+      </varlistentry>
+      
       <varlistentry>
         <term><option>-show_projects</option></term>
         <listitem>
           <para>show attached projects</para>
         </listitem>
       </varlistentry>
+      
       <varlistentry>
         <term><option>-return_results_immediately</option></term>
         <listitem>
           <para>contact server when have results</para>
         </listitem>
       </varlistentry>
+      
       <varlistentry>
         <term>
           <option>-detach_project <replaceable>URL</replaceable></option>
@@ -93,6 +110,7 @@
           <para>detach from a project</para>
         </listitem>
       </varlistentry>
+      
       <varlistentry>
         <term>
           <option>-reset_project <replaceable>URL</replaceable></option>
@@ -101,12 +119,17 @@
           <para>reset (clear) a project</para>
         </listitem>
       </varlistentry>
+      
       <varlistentry>
-        <term><option>-attach_project</option></term>
+        <term>
+          <option>-attach_project <replaceable>URL</replaceable> 
+            <replaceable>key</replaceable></option>
+        </term>
         <listitem>
-          <para>attach to a project (will prompt for URL and account key)</para>
+          <para>attach to a project</para>
         </listitem>
       </varlistentry>
+      
       <varlistentry>
         <term>
           <option>-update_prefs <replaceable>URL</replaceable></option>
@@ -115,29 +138,40 @@
           <para>contact a project to update preferences</para>
         </listitem>
       </varlistentry>
+      
       <varlistentry>
         <term><option>-run_cpu_benchmarks</option></term>
         <listitem>
           <para>run the CPU benchmarks</para>
         </listitem>
       </varlistentry>
+      
       <varlistentry>
         <term><option>-check_all_logins</option></term>
         <listitem>
-          <para>check input from remote users</para>
+          <para>for idle detection, check remote logins too</para>
         </listitem>
       </varlistentry>
+      
       <varlistentry>
         <term><option>-allow_remote_gui_rpc</option></term>
         <listitem>
           <para>allow remote GUI RPC connections</para>
         </listitem>
       </varlistentry>
+      
       <varlistentry>
         <term><option>-redirectio</option></term>
-	<listitem>
-	  <para>redirect stdout and stderr to log files</para>
-	</listitem>
+        <listitem>
+          <para>redirect stdout and stderr to log files</para>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry>
+        <term><option>-dir <replaceable>path</replaceable></option></term>
+        <listitem>
+          <para>use given dir as BOINC home</para>
+        </listitem>
       </varlistentry>
     </variablelist>
   </refsect1>
@@ -159,7 +193,7 @@
   
   <refsect1>
     <title>AUTHOR</title>
-    <para>This manual page was written by &dhusername; &dhemail; for the
+    <para>This manual page was written by &dhusername; &lt;&dhemail;&gt; for the
       &debian; project (but may be used by others). Permission is granted to
       copy, distribute and/or modify this document under the terms of the &gnu;
       General Public License, Version 2 or any later version published by the
